# InstantVideoTrimmer

./: .gitignore  cuts.txt  pyproject.toml
.streamlit/: config.toml
src/: VideoEditor.py  main.py
src/utils/: TimeHelper.py
