[tool.poetry]
name = "naruto-project"
version = "0.1.0"
description = ""
authors = ["Gust4voSales <manoel0gustavo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ffmpeg-python = "^0.2.0"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
