[tool.poetry]
name = "instant-video-trimmer"
version = "0.1.0"
description = ""
authors = ["Gust4voSales <manoel0gustavo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
